--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
 
 
     defaultConfig {
-        applicationId "com.maysarohnikenayusaraswati.crud"
+        applicationId "com.nandaadisaputra.crud"
         minSdkVersion 18
         targetSdkVersion 32
         versionCode 1
